# splash-aesthetics-mcp

./: README.md  pyproject.toml  splash_aesthetics_mcp.py
taxonomy/: compositional_parameters.yaml  splash_types.yaml  temporal_phases.yaml
