[project]
name = "splash-aesthetics-mcp"
version = "1.0.0"
description = "Physics-based splash aesthetics enhancement with three-layer categorical composition"
authors = [
    {name = "Dal Marsters", email = "dal@lushy.app"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
